ingress/service-ingress.yml
apiVersion: v1

kind: Service

metadata:
  name: nginx-ingress

spec:
  type: NodePort
  ports:
  - targetPort: 80
    port: 80 
    protocol: TCP
    name: http 
  - targetPort: 443
    port: 443
    protocol: TCP
    name: https
  selector: 
    name: nginx-ingress
